# pycredstore

./: .bumpversion.cfg  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
pycredstore/: __init__.py  cli.py
tests/: __init__.py  test_pycredstore.py
